fixed z-index

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,7 @@
     border-radius: 2px;
     border: 1px solid transparent;
     box-shadow: 0px 0px 3px black;
+    z-index: 9999;
 }
 .tx-google-translate-show {
     display: block;
